Wed Sep 16 15:08:17 2015  Akinori MUSHA  <knu@iDaemons.org>

	* doc/syntax/literals.rdoc (Strings): [DOC] Revise the character
	  literal part.

Wed Sep 16 14:55:33 2015  Akinori MUSHA  <knu@iDaemons.org>

	* doc/syntax/literals.rdoc (Strings): [DOC] Document the full list
	  of supported escape sequences in string literals.

Wed Sep 16 14:49:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_setbyte): keep the code range as possible.

Wed Sep 16 13:23:48 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* doc/syntax/literals.rdoc (Strings): mention about ?a literal.

Wed Sep 16 12:06:53 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* dir.c (glob_helper): check pathtype once again by lstat(2) if
	  dp->d_type is DT_UNKNOWN. XFS may return DT_UNKNOWN.

Wed Sep 16 03:49:19 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_thread.rb (TestThread#test_mutex_synchronize):
	  insert waste loop for invoking preemptive thread context switch.
	  [Bug #11496]

Tue Sep 15 19:38:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_objspace_alloc, rb_objspace_free): define always
	  regardless ENABLE_VM_OBJSPACE, and free heap pages.

Tue Sep 15 15:15:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_sysinit, rb_w32_readdir): compare by
	  encoding index to get rid of encoding initialization before VM
	  object space allocation.

	* dir.c (fundamental_encoding_p, push_glob): compare by encoding
	  index immediately.

	* enc/{ascii,us_ascii,utf_8}.c: set encoding indexes of
	  fundamental built-in encodings so that usable as well as
	  allocated rb_encoding before rb_enc_init().

	* encindex.h: separate encoding index constants from internal.h.

Tue Sep 15 13:13:13 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sort_bang, rb_ary_sort): [DOC] correct block
	  return values, which may be a negative or positive integer, not
	  ony -1 or +1.
